# codeminal

./: .gitignore  README.md  install.sh  jest.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  tsconfig.test.json
src/: __init__.py
src/cli/: __init__.py  processor.py
src/core/: aiProcessor.ts  types.py
tests/: setupTests.ts
tests/e2e/: test_workflow.ts
tests/integration/: test_cli_processor.py
tests/unit/: aiProcessor.test.ts
