[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeminal"
version = "2.0.0"
authors = [
  { name="Likhon Developer", email="developer@codeminal.dev" },
]
description = "AI-Powered Full-Stack Development Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"